# playground

./: .gitignore
architecture-examples/cqrs-event_sourcing/: Cargo.toml
architecture-examples/cqrs-event_sourcing/src/: commands.rs  events.rs  lib.rs  model.rs
bankAPI/: docker-compose.yml
bankAPI/web/: Dockerfile  app.py
flutter/bmi_calculator/lib/: main.dart
flutter/exchange_converter/: README.md  pubspec.yaml
flutter/exchange_converter/lib/: main.dart
flutter/flutter_complete_guide/: pubspec.yaml
flutter/flutter_complete_guide/lib/: answer.dart  main.dart  question.dart  quiz.dart  result.dart
flutter/gif_finder/: pubspec.yaml
flutter/people_counter/: README.md  pubspec.yaml
flutter/people_counter/lib/: main.dart
flutter/task_list/: pubspec.yaml
flutter/task_list/lib/: main.dart
go/find_duplicated_files/: go.mod  main.go
php/todo/: .env.example  index.php  reg.php  test.php
php/todo/core/: bootstrap.php
php/todo/database/: create_db.sql
python/google_maps/: Pipfile  app.py
python/google_oauth2_login/: .env.example  .gitignore  Pipfile  app.py
python/mytodo/: .env  Pipfile  app.py
python/simple_store/: Pipfile  app.py
react/pipefy-ui-clone/: package-lock.json  package.json
rust/async/: Cargo.toml
rust/async/src/: main.rs
rust/lifetimes/: Cargo.toml
rust/linked_lists/: Cargo.toml
rust/microservices/hyper-microservice/: Cargo.toml
rust/net_stack/: Cargo.toml
rust/rustlings/: Cargo.toml
rust/snake/: Cargo.toml  README.md
rust/traits/: Cargo.toml
vue/vue-auth-firebase/: README.md  package-lock.json  package.json
(+143 files in other folders)
