[package]
name = "hyper-microservice"
version = "0.1.0"
authors = ["Rodrigo Mendes <mendes.rodrigo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.2"
tokio = { version = "0.2.13", features = ["full"] }